# vos

./: .gitignore  Cargo.toml  README.md  create_uefi_img.sh  run_qemu.sh
.cargo/: config.toml
src/: fs.rs  lib.rs  main.rs  memory.rs  shell.rs
src/arch/aarch64/: mod.rs
src/arch/x86_64/: allocator.rs  interrupts.rs  memory.rs  mod.rs  serial.rs
src/gui/: desktop.rs  font.rs  gop.rs  mod.rs  mouse.rs  terminal.rs
