[package]
name = "vos"
version = "0.1.0"
edition = "2021"

[dependencies]
spin = "0.9.8"
linked_list_allocator = "0.10.5"
uefi = { version = "0.36.1", features = ["alloc", "logger"] }
log = "0.4"
uefi-raw = "0.13.0"

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = "0.14.2"
uart_16550 = "0.2.0"
pc-keyboard = "0.5.0"
pic8259 = "0.11.0"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
volatile = "0.2.6"

[target.'cfg(target_arch = "aarch64")'.dependencies]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
